# parser241-production-rule

./: README.md  parser241-production-rule.cabal  stack.yaml
src/Parser241/Parser/: ProductionRule.hs
src/Parser241/Parser/ProductionRule/: Interface.hs
src/Parser241/Parser/ProductionRule/Internal/: Maker.hs
test/: Spec.hs
test/Test/: ProductionRule.hs
